styles/base.scss
html, body, nav * {
    margin: 0;
    padding: 0;
}
body {
    font: 1em/1.7 "Trebuchet MS", sans-serif;
    color: #444;
}
a {
    color: #003F6F;
    &:hover {
        color: #550033;
    }
}
br {
    display: block;
    margin-top: 5px;
    content: " ";
}
h1, h2, h3, h4, h5, h6 {
    font-family: "Palatino Linotype", Palatino, sans-serif;
    font-weight: normal;
    border-bottom: 1px dotted #003F6F;
}
h1 {
    font-size: 2em;
    margin-bottom: 0.5em;
}
button {
    background: white;
    border: 1px solid #ccc;
    border-radius: 0;
    padding: 4px 4px 0;
    cursor: pointer;
}
table {
    border-collapse: collapse;
    border-left: 5px solid #503;
    border-right: 1px solid #ccc;
    color: black;
    td, th {
        border: 1px solid #ddd;
        border-right: none;
        padding: 4px 7px;
        text-align: left;
        vertical-align: top;
    }
}
img {
    max-width: 100%;
    height: auto;
}
figure {
    margin: 1em 10px;
}
pre {
    white-space: pre-wrap;
}
code {
    font-family: Courier, monospace;
    padding: 0.1em;
    background: #eee;
}
pre code {
    display: block;
    margin-top: 1em;
    overflow: auto;
    padding: 0.5em;
    white-space: pre-wrap;
}
.correct, .almost, .incorrect {
    border-left: 3px solid;
}
.correct > *, .almost > *, .incorrect > *{
    padding-left: 3px;
}
.correct { border-left-color: #a6e22e; }
.almost { border-left-color: #e6db74; }
.incorrect { border-left-color: #f92672; }

.hide {
    position: absolute;
    left: -10000px;
}

.skiplink {
    background: black;
    color: white;
    position: absolute;
    top: 0;
    left: -10000px;

    &:focus {
        left: 0;
    }
}

